have to do this to avoid the horizontal scroll

--- a/src/css/7-scopes/scopes.block-chat.scss
+++ b/src/css/7-scopes/scopes.block-chat.scss
@@ -4,10 +4,10 @@
 
 
 .s-block-chat {
+  margin: 10px;
+  margin-bottom: 0;
   box-shadow: 0px 0px 10px 2px rgba($black-100, 0.15);
   font-size: rem(16px);
-
-  &.state-empty { margin-top: 10px; }
 
   &.state-empty .s-block-chat__header p { margin: 0 auto; }
 
