--- a/src/css/7-scopes/scopes.chat.scss
+++ b/src/css/7-scopes/scopes.chat.scss
@@ -10,7 +10,7 @@
   flex-shrink: 0;
   width: 100vw;
   height: 100vh;
-  padding: 75px 10px 0;
+  padding: 75px 0 0;
 }
 
 .s-chat__output {
@@ -20,5 +20,5 @@
 
 .s-chat__input {
   width: 100%;
-  padding: 10px 0;
+  padding: 10px;
 }
